corrections contrast

--- a/style.css
+++ b/style.css
@@ -770,7 +770,7 @@ h4{
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #B65E41;
 }
 
 .tc-white {
